--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<select id="shuzoku" name="shuzoku">
 						<option value=""></option>
 						<option value="アクエフ">アクエフ</option>
+						<option value="アダマンタス">アダマンタス</option>
 						<option value="アプカル">アプカル</option>
 						<option value="アントリオン">アントリオン</option>
 						<option value="ウサギ">ウサギ</option>
@@ -41,10 +42,12 @@
 						<option value="トゥルフェイア">トゥルフェイア</option>
 						<option value="トカゲ">トカゲ</option>
 						<option value="フライ">フライ</option>
+						<option value="フライトラップ">フライトラップ</option>
 						<option value="マンドラゴラ">マンドラゴラ</option>
 						<option value="モスキート">モスキート</option>
 						<option value="ラズ">ラズ</option>
 						<option value="ラプトル">ラプトル</option>
+						<option value="リンクス">リンクス</option>
 						<option value="レディバグ">レディバグ</option>
 					</select>
 				</th>
@@ -96,8 +99,11 @@
 				</th>
 			</tr>
 		</table>
+	<br>
+	<label><input type="checkbox" id="IL" name="IL" checked="checked">ItemLevel119未満のペットを含まない</label>
 	</form>
 	<br>
+	
 	<table id='WStable' border>
 		<tr style="text-align:center; background-color:#87CEEB">
 			<th>種族</th>
