--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body onLoad="defaultArray()">
 	<script type="text/javascript" src="BeastWS.js"></script>
 	<h1 style="text-align:center">ペットWS検索</h1>
+	<a href="renkei.html">ペット連携検索へ</a>
 	<h2>検索</h2>
 	<form name="search_form" onChange="createTable()">
 		<table id='searchTable'>
@@ -18,7 +19,7 @@
 				<th>連携属性</th>
 			</tr>
 			<tr>
-				<th>
+				<td>
 					<select id="shuzoku" name="shuzoku">
 						<option value=""></option>
 						<option value="アクエフ">アクエフ</option>
@@ -50,9 +51,9 @@
 						<option value="リンクス">リンクス</option>
 						<option value="レディバグ">レディバグ</option>
 					</select>
-				</th>
-				<th><input type="text" id="skill" size="30" onKeyPress="return submitStop(event)"></th>
-				<th>
+				</td>
+				<td><input type="text" id="skill" size="30" onKeyPress="return submitStop(event)"></td>
+				<td>
 					<select id="shubetu" name="shubetu">
 						<option value=""></option>
 						<option value="物理">物理</option>
@@ -60,8 +61,8 @@
 						<option value="強化">強化</option>
 						<option value="弱体">弱体</option>
 					</select>
-				</th>
-				<th>
+				</td>
+				<td>
 					<select id="zokusei" name="zokusei">
 						<option value=""></option>
 						<option value="斬">斬</option>
@@ -77,8 +78,8 @@
 						<option value="光">光</option>
 						<option value="闇">闇</option>
 					</select>
-				</th>
-				<th>
+				</td>
+				<td>
 					<select id="renkei" name="renkei">
 						<option value=""></option>
 						<option value="溶解">溶解</option>
@@ -96,7 +97,7 @@
 						<option value="光">光</option>
 						<option value="闇">闇</option>
 					</select>
-				</th>
+				</td>
 			</tr>
 		</table>
 	<br>
