--- a/kinoko.html
+++ b/kinoko.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>‚«‚Ì‚±</title>
+	<title>ãã®ã“</title>
 	<script>
 		function changeImage(){
 			document.getElementById("image").src="27592124.jpg";
@@ -9,7 +9,7 @@
 	</script>
 </head>
 <body>
-	<h1>‚ª‚¼‚¤</h1>
-	<img id="image" src="BXkEOBgCMAARkyl.png" width="1023" height="833" alt="‚İ‚¦‚È‚¢">
+	<h1>ãŒãã†</h1>
+	<img id="image" src="BXkEOBgCMAARkyl.png" width="1023" height="833" alt="ã¿ãˆãªã„">
 </body>
 </html>
